increased gap in feed container and ensured consistent padding for feed buttons

--- a/src/modules/feed/feedButtons.less
+++ b/src/modules/feed/feedButtons.less
@@ -56,6 +56,16 @@
 }
 
 .pp_feedContainer {
-    gap: 0.25rem;
+    gap: 0.5rem;
     height: 40px;
+}
+
+.pp_feedContainer a {
+    padding-left: 0.625rem !important;
+    padding-right: 0.625rem !important;
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
